<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lifegame</string>
    <string name="life_game">ライフゲーム</string>
    <string name="menu_settings">設定</string>
    <string name="label_time">経過時間: </string>
    <string name="label_num_life">生命の数: </string>
    <string name="default_num_life">0</string>
    <string name="start">スタート</string>
    <string name="stop">ストップ</string>
    <string name="step">ステップ実行</string>
    <string name="random">ランダム</string>
    <string name="reset">リセット</string>

</resources>